--- a/Frontend/html/credits.html
+++ b/Frontend/html/credits.html
@@ -28,6 +28,7 @@
     <p1>With special thanks to:</p1>
         <p2>Damian Kesseler: Project management</p2>
         <p2>Kolja van Kampen: Who thought of the whole idea (sorry you couldn't use it)</p2>
+        <p2>Karl Amort: For making the original <a href="https://github.com/KarlAmort/firstname-database">First name database</a></p2>
 
     <button onclick="window.location.assign('./welcome.html')">Back to welcome page</button>
 </body>
