--- a/Frontend/html/likes.html
+++ b/Frontend/html/likes.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <div id="appWrapper">
-        <div id="app" class="likeApp">
+    <div id="app">
+        <div class="container likeApp">
             <h2>Liked names</h2>
             
             <div class="containment">
-                <div id="mutualList" class="accStyle accfunction"> <h3>🠋 Mutually liked names 🠋</h3></div>
+                <div id="mutualList" class="accfunction"> <h3>🠋 Mutually liked names 🠋</h3></div>
                 <div class="panels">
-                    <div class="accStyle2">
+                    <div class="accStyle">
                         <div class="containment">
                             <ol id="likedList1" class="inner"></ol>
                         </div>
@@ -27,7 +27,7 @@
             </div>
 
             <div class="containment">
-                <div id="Userlist" class="accStyle accfunction"> <h3>🠋 Your liked names 🠋</h3></div>
+                <div id="Userlist" class="accfunction"> <h3>🠋 Your liked names 🠋</h3></div>
                 <div class="panels">
                     <div class="accStyle">
 
@@ -40,7 +40,7 @@
             </div>
 
             <div class="containment">
-                <div id="Partnerlist" class="accStyle accfunction"> <h3>🠋 Partner liked names that you haven't seen yet 🠋</h3></div>
+                <div id="Partnerlist" class="accfunction"> <h3>🠋 Partner liked names that you haven't seen yet 🠋</h3></div>
                 <div class="panels">
                     <div class="accStyle">
                         <div class="containment">
@@ -50,10 +50,10 @@
                 </div>
             </div>
 
-            <div id="menuContainer">
-                <icon-menu page="likes"></icon-menu>
-            </div>
-
+            
+        </div>
+        <div id="menuContainer">
+            <icon-menu page="likes"></icon-menu>
         </div>
     </div>
 
